Fix for 1189159: set a z-index > WorkbenchLayoutImpl.MAXIMIZED_PANEL_Z_INDEX for the different menu types.

--- a/uberfire-workbench/uberfire-workbench-client/src/main/resources/org/uberfire/client/resources/css/workbench.css
+++ b/uberfire-workbench/uberfire-workbench-client/src/main/resources/org/uberfire/client/resources/css/workbench.css
@@ -4,6 +4,18 @@
     padding: 0;
 }
 
+.workbenchMenuBar {
+    z-index: 100015;
+}
+
+.perspectiveContextMenus {
+    z-index: 100010;
+}
+
+.partContextMenus {
+    z-index: 100005;
+}
+
 .toolbar {
     min-height: 30px;
     margin-top: 0;
